# kiakun-skills

./: LESSONS_LEARNED.md  README.md  SKILL.md  pyproject.toml
scripts/: cli.py
skills/cc-switch-claude-provider/: SKILL.md
skills/cc-switch-claude-provider/agents/: openai.yaml
skills/cc-switch-claude-provider/scripts/: configure_cc_switch_claude_provider.py
skills/xiaohongshu/: SKILL.md
