[project]
name = "douyin-creator-research"
version = "0.1.0"
description = "抖音达人研究助手，基于 Playwright 的浏览器自动化工具"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.42.0",
    "pydantic>=2.0",
    "jinja2>=3.1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E402",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
